2022-05-30  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/ntoa.h: Functions "kernaux_utoa" and "kernaux_itoa"
	receive prefix
	* include/kernaux/ntoa.h: Constant "KERNAUX_UTOA_BUFFER_SIZE" renamed to
	"KERNAUX_UTOA_MIN_BUFFER_SIZE", "KERNAUX_ITOA_BUFFER_SIZE" to
	"KERNAUX_ITOA_MIN_BUFFER_SIZE"
	* include/kernaux/ntoa.h: Functions "kernaux_[u|i]toa[10|16]" return the end
	of a buffer
	* include/kernaux/ntoa.h: functions "kernaux_[u|i]toa16" put default prefix

2022-05-28  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.3.0 released

2022-05-24  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Test options made stable
	* configure.ac: Feature "bloat" made stable
	* src/: Use assertions everywhere (closes #14)

2022-02-02  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Generate position-independent code by default, disable with
	"--disable-pic"
	* configure.ac: "-Werror" by default, disable with "--disable-werror"

2022-02-01  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Generate headers conditionally depending on options
	* src/printf.c: Fix potential buffer overflow

2022-01-24  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/ntoa.h: Add func "kernaux_itoa"

2022-01-23  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/assert.h: Require semicolon after macros
	* include/kernaux/libc.h: Add funcs "atoi", "isdigit", "isspace"
	* include/kernaux/ntoa.h: Rename const "KERNAUX_ITOA_BUFFER_SIZE" to
	"KERNAUX_ITOA10_BUFFER_SIZE"
	* include/kernaux/ntoa.h: Add funcs "kernaux_utoa16" and "kernaux_itoa16"
	* include/kernaux/ntoa.h: Add consts "KERNAUX_UTOA10_BUFFER_SIZE" and
	"KERNAUX_UTOA16_BUFFER_SIZE"
	* include/kernaux/ntoa.h: Add func "kernaux_utoa"

2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.2.0 released

	* configure.ac: Made stable
	* include/kernaux/cmdline.h: Made stable

2022-01-22  Alex Kotov  <kotovalexarian@gmail.com>

	* README.md: Configuration options now follow semver