@@ -7,6 +7,7 @@ extern "C" {
 
 #include <stdint.h>
 
+#define KERNAUX_NTOA_DEFAULT_PREFIX_8  "0o"
 #define KERNAUX_NTOA_DEFAULT_PREFIX_16 "0x"
 
 // "1111111111111111111111111111111111111111111111111111111111111111"
@@ -15,6 +16,13 @@ extern "C" {
 // "111111111111111111111111111111111111111111111111111111111111111"
 // "-1000000000000000000000000000000000000000000000000000000000000000"
 #define KERNAUX_ITOA_MIN_BUFFER_SIZE (65 + 1)
+
+// "0o1777777777777777777777"
+#define KERNAUX_UTOA8_BUFFER_SIZE (21 + 2 + 1)
+
+// "0o777777777777777777777"
+// "-0o1000000000000000000000"
+#define KERNAUX_ITOA8_BUFFER_SIZE (22 + 2 + 1)
 
 // "18446744073709551615"
 #define KERNAUX_UTOA10_BUFFER_SIZE (20 + 1)
@@ -32,6 +40,9 @@ extern "C" {
 
 char *kernaux_utoa(uint64_t value, char *buffer, int base, const char *prefix);
 char *kernaux_itoa(int64_t  value, char *buffer, int base, const char *prefix);
+
+char *kernaux_utoa8(uint64_t value, char *buffer);
+char *kernaux_itoa8(int64_t  value, char *buffer);
 
 char *kernaux_utoa10(uint64_t value, char *buffer);
 char *kernaux_itoa10(int64_t  value, char *buffer);
