@@ -13,6 +13,8 @@ end
 
 have_func 'kernaux_utoa'
 have_func 'kernaux_itoa'
+have_func 'kernaux_utoa8'
+have_func 'kernaux_itoa8'
 have_func 'kernaux_utoa10'
 have_func 'kernaux_itoa10'
 have_func 'kernaux_utoa16'
