@@ -9,6 +9,12 @@ static VALUE rb_KernAux_utoa(int argc, const VALUE *argv, VALUE self);
 #ifdef HAVE_KERNAUX_ITOA
 static VALUE rb_KernAux_itoa(int argc, const VALUE *argv, VALUE self);
 #endif
+#ifdef HAVE_KERNAUX_UTOA8
+static VALUE rb_KernAux_utoa8(VALUE self, VALUE number);
+#endif
+#ifdef HAVE_KERNAUX_ITOA8
+static VALUE rb_KernAux_itoa8(VALUE self, VALUE number);
+#endif
 #ifdef HAVE_KERNAUX_UTOA10
 static VALUE rb_KernAux_utoa10(VALUE self, VALUE number);
 #endif
@@ -74,6 +80,12 @@ void init_ntoa()
 #endif
 #ifdef HAVE_KERNAUX_ITOA
     rb_define_singleton_method(rb_KernAux, "itoa", rb_KernAux_itoa, -1);
+#endif
+#ifdef HAVE_KERNAUX_UTOA8
+    rb_define_singleton_method(rb_KernAux, "utoa8", rb_KernAux_utoa8, 1);
+#endif
+#ifdef HAVE_KERNAUX_ITOA8
+    rb_define_singleton_method(rb_KernAux, "itoa8", rb_KernAux_itoa8, 1);
 #endif
 #ifdef HAVE_KERNAUX_UTOA10
     rb_define_singleton_method(rb_KernAux, "utoa10", rb_KernAux_utoa10, 1);
@@ -164,6 +176,33 @@ VALUE rb_KernAux_itoa(const int argc, const VALUE *argv, const VALUE self)
 
     char buffer[KERNAUX_ITOA_MIN_BUFFER_SIZE + prefix_len];
     kernaux_itoa(NUM2LL(number_rb), buffer, convert_base(base_rb), prefix);
+    return rb_funcall(rb_str_new2(buffer), rb_intern_freeze, 0);
+}
+#endif
+
+#ifdef HAVE_KERNAUX_UTOA8
+VALUE rb_KernAux_utoa8(
+    const VALUE self_rb __attribute__((unused)),
+    const VALUE number_rb
+) {
+    RB_INTEGER_TYPE_P(number_rb);
+    if (rb_funcall(number_rb, rb_intern_LESS, 1, INT2FIX(0))) {
+        rb_raise(rb_eRangeError, "can't convert negative number to uint64_t");
+    }
+    char buffer[KERNAUX_UTOA8_BUFFER_SIZE];
+    kernaux_utoa8(NUM2ULL(number_rb), buffer);
+    return rb_funcall(rb_str_new2(buffer), rb_intern_freeze, 0);
+}
+#endif
+
+#ifdef HAVE_KERNAUX_ITOA8
+VALUE rb_KernAux_itoa8(
+    const VALUE self_rb __attribute__((unused)),
+    const VALUE number_rb
+) {
+    RB_INTEGER_TYPE_P(number_rb);
+    char buffer[KERNAUX_ITOA8_BUFFER_SIZE];
+    kernaux_itoa8(NUM2LL(number_rb), buffer);
     return rb_funcall(rb_str_new2(buffer), rb_intern_freeze, 0);
 }
 #endif
